--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ env/
 
 # Archivos generados por la aplicación
 cartones/*.md
+cartones/*.png
 cuentas_familia/
 cartonesjugando.md
 comprobar_carton.md
