Mejora: Gestión selectiva de imágenes y compresión ZIP inteligente. Se implementó la generación de imágenes solo para cartones marcados con 'x', compresión de imágenes recientes en archivos ZIP con marcas de tiempo, y eliminación de imágenes al borrar jugadores. Se actualizó el README con las nuevas características.

--- a/.gitignore
+++ b/.gitignore
@@ -35,11 +35,16 @@ env/
 # Archivos generados por la aplicación
 cartones/*.md
 cartones/*.png
+cartones/*.zip
+cartones/imagenes_de_los_cartones/*.png
 cuentas_familia/
 cartonesjugando.md
+# Temporalmente comentado para permitir acceso al archivo
 comprobar_carton.md
 estado_envio.json
 datos_bingo.json
+estado_imagenes.json
+imagenes_recientes.json
 
 # Otros
 .DS_Store
